##############################################################################
# CMAKE CONFIGURATION
##############################################################################
cmake_minimum_required(VERSION 3.5.1 FATAL_ERROR)

project(height_sensing_subsystem VERSION 1 LANGUAGES C)

set(CMAKE_BUILD_TYPE Release)

message("\n" "=========================================")
message("Project: ${PROJECT_NAME} ")
message("=========================================")

##############################################################################
# LIBRARIES CONFIG FILE
##############################################################################

##############################################################################
# HEADERS DIRECTORY
##############################################################################

##############################################################################
# LIBRARIES DIRECTORY
##############################################################################

##############################################################################
# SOURCE CODE
##############################################################################
set(LISTENER_SOURCE "src/listener.c" )
set(PUBLISHER_SOURCE "src/publisher.c")

##############################################################################
# EXECUTABLES
##############################################################################
add_executable(listener ${LISTENER_SOURCE})
add_executable(publisher ${PUBLISHER_SOURCE})
               
##############################################################################
# TARGET LIBRARIES
##############################################################################
target_link_libraries(listener wsock32 ws2_32)  
target_link_libraries(publisher wsock32 ws2_32)      
                
message("=========================================")
message("Project: ${PROJECT_NAME} COMPILED WITH CMAKE " ${CMAKE_VERSION})
message("=========================================")
